--- a/style.css
+++ b/style.css
@@ -1,11 +1,13 @@
 * {
-  font-family: "Single Day", cursive;
-  font-weight: 400;
+  font-family: "Overpass", sans-serif;
+  font-optical-sizing: auto;
   font-style: normal;
   box-sizing: border-box;
 }
 .navbar {
   background-color: #f49742;
+  position: fixed !important;
+  width: 100%;
 }
 
 .navbar .navbar-brand span {
@@ -18,8 +20,71 @@
   text-transform: uppercase;
   color: white;
   font-weight: 900;
-}
 
+}
+.navbar .nav-item {
+  position: relative;
+}
+.navbar .nav-item .nav-link::before{
+  content: "";
+  position: absolute;
+  background-color: white;
+  width: 6px ;
+  height: 80px ;
+right: 50px;
+top: -10px;
+transform: rotate(268deg);
+transition: all ease 0.5s;
+opacity: 0;
+ /* display: none;   */
+}
+.navbar .nav-item .nav-link:hover::before{
+  display: block;
+transform: rotate(220deg);
+transition: all ease 0.5s;
+background-color: #2e9cbc;
+opacity: 1;
+}
+.navbar .nav-item .about::before{
+  content: "";
+  position: absolute;
+  background-color: black;
+  width: 6px ;
+  height: 80px ;
+right: 60px;
+top: -10px;
+transform: rotate(268deg);
+transition: all ease 0.5s;
+opacity: 0;
+
+}
+.navbar .nav-item .about:hover::before{
+  display: block;
+transform: rotate(220deg);
+transition: all ease 0.5s;
+background-color: #2e9cbc;
+opacity: 1;
+}
+.navbar .nav-item .community::before{
+  content: "";
+  position: absolute;
+  background-color: black;
+  width: 6px ;
+  height: 80px ;
+right: 120px;
+top: -10px;
+transform: rotate(268deg);
+transition: all ease 0.5s;
+opacity: 0;
+
+}
+.navbar .nav-item .community:hover::before{
+  display: block;
+transform: rotate(220deg);
+transition: all ease 0.5s;
+background-color: #2e9cbc;
+opacity: 1;
+}
 .navbar .nav-item .active {
   color: #2e9cbc !important;
 }
@@ -28,8 +93,7 @@
 }
 /* hero section start */
 .hero-section {
-
-background-color: black;
+  background-color: black;
   height: 100vh;
 }
 .hero-section .hero-content-sec {
@@ -60,7 +124,6 @@ background-color: black;
   padding: 10px 30px;
   border: 6px solid #f49742;
   border-radius: 20px;
- 
 }
 .hero-section .hero-content-sec button a {
   text-decoration: none;
@@ -69,8 +132,8 @@ background-color: black;
   font-weight: 900;
 }
 /* media query hero section */
-@media screen and (max-width:757px) {
-  .hero-section{
+@media screen and (max-width: 757px) {
+  .hero-section {
     height: 80vh;
   }
   .hero-section .hero-content-sec h4 {
@@ -78,11 +141,10 @@ background-color: black;
   }
   .hero-section .hero-content-sec h2 {
     font-size: 50px;
-    
   }
 }
-@media screen and (max-width:535px) {
-  .hero-section{
+@media screen and (max-width: 535px) {
+  .hero-section {
     height: 60vh;
   }
   .hero-section .hero-content-sec h4 {
@@ -91,15 +153,14 @@ background-color: black;
   }
   .hero-section .hero-content-sec h2 {
     font-size: 40px;
-    
   }
-  .hero-section .hero-content-sec{
+  .hero-section .hero-content-sec {
     transform: translateY(80px);
   }
 }
 /* about section */
 .about-section {
- padding-bottom: 70px;
+  padding-bottom: 70px;
 }
 .about-container {
   display: flex;
@@ -131,14 +192,14 @@ background-color: black;
   overflow: hidden;
 }
 /* media queru about */
-@media screen and (max-width:800px) {
-  .about-container{
+@media screen and (max-width: 800px) {
+  .about-container {
     width: 80% !important;
     margin: 0 auto;
   }
 }
-@media screen and (max-width:500px) {
-  .about-container{
+@media screen and (max-width: 500px) {
+  .about-container {
     width: 90% !important;
     margin: 0 auto;
   }
@@ -149,7 +210,7 @@ background-color: black;
   .about-container .about-para h2 {
     font-size: 40px;
   }
-  .about-container .about-heading h2{
+  .about-container .about-heading h2 {
     width: 60%;
     margin: 0 auto;
   }
@@ -176,11 +237,9 @@ background-color: black;
   font-size: 40px;
   color: white;
   padding-bottom: 30px;
-
 }
 
 .chart-images {
-
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -201,7 +260,7 @@ background-color: black;
 }
 /* community section */
 .community-section {
-  background-color: #f49742;
+  background-color: #2e9cbc;
   padding: 30px 0;
 }
 .comunity-icons h2 {
@@ -214,46 +273,136 @@ background-color: black;
 .comunity-icons span {
   background-color: black;
   padding: 40px 20px 20px 20px;
-margin: 0 10px;
+  margin: 0 10px;
 }
 .comunity-icons span i {
   color: white;
   font-size: 38px;
 }
 
-.community-images .jupiter-image{
-width: 40%;
-margin: 0 auto;
-
-
+.community-images .jupiter-image {
+  width: 40%;
+  margin: 0 auto;
 }
-.community-images .jupiter-image img{
+.community-images .jupiter-image img {
   width: 100%;
   margin-top: 40px;
   transition: all ease 0.5s;
-  }
-  .community-images .jupiter-image img:hover {
-    scale: 1.1;
-    transition: all ease 0.5s;
-  }
-  .community-images h2{
-    font-size: 70px;
-    text-transform: capitalize;
-    color: white;
-    text-shadow: 6px 2px red;
- 
-  }
-.contact-adress h2{
+}
+.community-images .jupiter-image img:hover {
+  scale: 1.1;
+  transition: all ease 0.5s;
+}
+.community-images h2 {
   font-size: 70px;
   text-transform: capitalize;
   color: white;
   text-shadow: 6px 2px red;
 }
-.contact-adress p{
+.contact-adress h2 {
+  font-size: 70px;
+  text-transform: capitalize;
+  color: white;
+  text-shadow: 6px 2px red;
+}
+.contact-adress p {
   background-color: #2e9cbc;
   color: white;
   font-size: 30px;
   width: 60%;
   margin: 0 auto;
   overflow: hidden;
+}
+/* tokenomics */
+/* .wrapper {
+  position: relative;
+  width: 80vw;
+  transform: translate(-50%, -50%);
+
+  left: 50%;
+  display: flex;
+  justify-content: space-around;
+  gap: 10px;
+} */
+.tokenomics-section{
+  background-color: brown;
+}
+.tokenomics-section h2{
+  font-size: 70px;
+  text-transform: capitalize;
+  color: white;
+  text-shadow: 6px 2px red;
+}
+.tokenomics-section .wrapper{
+  width: 80%;
+  margin: 0 auto;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+padding: 80px 0;
+}
+.containers {
+  width: 40vmin;
+  height: 28vmin;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  padding: 1em 0;
+  position: relative;
+  font-size: 16px;
+  border-radius: 0.5em;
+  background-color: #21242b;
+  border-bottom: 10px solid #18f98f;
+}
+.tokenomics-section   i {
+  color: #18f98f;
+  font-size: 2.5em;
+  text-align: center;
+}
+.tokenomics-section  span.num {
+  color: #ffffff;
+  display: grid;
+  place-items: center;
+  font-weight: 600;
+  font-size: 3em;
+}
+.tokenomics-section  span.text {
+  color: #e0e0e0;
+  font-size: 1em;
+  text-align: center;
+  pad: 0.7em 0;
+  font-weight: 400;
+  line-height: 0;
+}
+@media screen and (max-width: 1024px) {
+  .wrapper {
+    width: 85vw;
+  }
+  .container {
+    height: 26vmin;
+    width: 26vmin;
+    font-size: 12px;
+  }
+}
+@media screen and (max-width: 768px) {
+  .wrapper {
+    width: 90vw;
+    flex-wrap: wrap;
+    gap: 30px;
+  }
+  .container {
+    width: calc(50% - 40px);
+    height: 30vmin;
+    font-size: 14px;
+  }
+}
+@media screen and (max-width: 480px) {
+  .wrapper {
+    gap: 15px;
+  }
+  .container {
+    width: 100%;
+    height: 25vmin;
+    font-size: 8px;
+  }
 }
