--- a/style.css
+++ b/style.css
@@ -91,6 +91,24 @@ opacity: 1;
 .navbar .nav-item .nav-link:hover {
   color: #2e9cbc;
 }
+@media screen and (max-width:800px) {
+  .navbar .nav-item .community:hover::before{
+   
+    display: none;
+  } 
+  .navbar .nav-item .about:hover::before{
+    display: none;
+  }
+  .navbar .nav-item .nav-link:hover::before{
+    display: none;
+
+  }
+  .navbar {
+
+position: relative !important;
+ 
+  }
+}
 /* hero section start */
 .hero-section {
   background-color: black;
@@ -378,7 +396,7 @@ padding: 80px 0;
   .wrapper {
     width: 85vw;
   }
-  .container {
+  .containers {
     height: 26vmin;
     width: 26vmin;
     font-size: 12px;
@@ -390,7 +408,7 @@ padding: 80px 0;
     flex-wrap: wrap;
     gap: 30px;
   }
-  .container {
+  .containers {
     width: calc(50% - 40px);
     height: 30vmin;
     font-size: 14px;
@@ -400,7 +418,7 @@ padding: 80px 0;
   .wrapper {
     gap: 15px;
   }
-  .container {
+  .containers {
     width: 100%;
     height: 25vmin;
     font-size: 8px;
