--- a/style.css
+++ b/style.css
@@ -278,7 +278,7 @@ position: relative !important;
 }
 /* community section */
 .community-section {
-  background-color: #2e9cbc;
+  background-color: #062c38;
   padding: 30px 0;
 }
 .comunity-icons h2 {
