--- a/style.css
+++ b/style.css
@@ -361,7 +361,7 @@ position: relative !important;
 padding: 80px 0;
 }
 .containers {
-  width: 40vmin;
+  width: 50vmin;
   height: 28vmin;
   display: flex;
   flex-direction: column;
@@ -372,6 +372,7 @@ padding: 80px 0;
   border-radius: 0.5em;
   background-color: #21242b;
   border-bottom: 10px solid #18f98f;
+  overflow: hidden;
 }
 .tokenomics-section   i {
   color: #18f98f;
