--- a/style.css
+++ b/style.css
@@ -4,87 +4,80 @@
   font-style: normal;
   box-sizing: border-box;
 }
-.navbar {
-  background-color: #f49742;
-  position: fixed !important;
-  width: 100%;
-  z-index: 1;
-}
+
 
 .navbar .navbar-brand span {
   font-size: 50px;
   text-transform: uppercase;
   color: white;
+
 }
 .navbar .nav-item .nav-link {
-  font-size: 30px;
+  font-size: 24px;
   text-transform: uppercase;
   color: white;
-  font-weight: 900;
-
+  font-weight: 600;
 }
 .navbar .nav-item {
   position: relative;
 }
-.navbar .nav-item .nav-link::before{
+.navbar .nav-item .nav-link::before {
   content: "";
   position: absolute;
   background-color: white;
-  width: 6px ;
-  height: 80px ;
-right: 50px;
-top: -10px;
-transform: rotate(268deg);
-transition: all ease 0.5s;
-opacity: 0;
- /* display: none;   */
+  width: 2px;
+  height: 60px;
+  right: 42px;
+  top: -6px;
+  transform: rotate(268deg);
+  transition: all ease 0.5s;
+  opacity: 0;
+  /* display: none;   */
 }
-.navbar .nav-item .nav-link:hover::before{
+.navbar .nav-item .nav-link:hover::before {
   display: block;
-transform: rotate(220deg);
-transition: all ease 0.5s;
-background-color: #2e9cbc;
-opacity: 1;
+  transform: rotate(220deg);
+  transition: all ease 0.5s;
+  background-color: #2e9cbc;
+  opacity: 1;
 }
-.navbar .nav-item .about::before{
+.navbar .nav-item .about::before {
   content: "";
   position: absolute;
   background-color: black;
-  width: 6px ;
-  height: 80px ;
-right: 60px;
-top: -10px;
-transform: rotate(268deg);
-transition: all ease 0.5s;
-opacity: 0;
-
+  width: 2px;
+  height: 60px;
+  right: 45px;
+  top: -4px;
+  transform: rotate(268deg);
+  transition: all ease 0.5s;
+  opacity: 0;
 }
-.navbar .nav-item .about:hover::before{
+.navbar .nav-item .about:hover::before {
   display: block;
-transform: rotate(220deg);
-transition: all ease 0.5s;
-background-color: #2e9cbc;
-opacity: 1;
+  transform: rotate(220deg);
+  transition: all ease 0.5s;
+  background-color: #2e9cbc;
+  opacity: 1;
 }
-.navbar .nav-item .community::before{
+.navbar .nav-item .community::before {
   content: "";
   position: absolute;
   background-color: black;
-  width: 6px ;
-  height: 80px ;
-right: 120px;
-top: -10px;
-transform: rotate(268deg);
-transition: all ease 0.5s;
-opacity: 0;
-
+  width: 2px;
+  height: 60px;
+  right: 80px;
+  top: -4px;
+  transform: rotate(268deg);
+  transition: all ease 0.5s;
+  opacity: 0;
 }
-.navbar .nav-item .community:hover::before{
+.navbar .nav-item .community:hover::before {
   display: block;
-transform: rotate(220deg);
-transition: all ease 0.5s;
-background-color: #2e9cbc;
-opacity: 1;
+  transform: rotate(220deg);
+  transition: all ease 0.5s;
+  background-color: #2e9cbc;
+  opacity: 1;
 }
 .navbar .nav-item .active {
   color: #2e9cbc !important;
@@ -92,63 +85,37 @@ opacity: 1;
 .navbar .nav-item .nav-link:hover {
   color: #2e9cbc;
 }
-@media screen and (max-width:800px) {
-  .navbar .nav-item .community:hover::before{
-   
-    display: none;
-  } 
-  .navbar .nav-item .about:hover::before{
+@media screen and (max-width: 800px) {
+  .navbar .nav-item .community:hover::before {
     display: none;
   }
-  .navbar .nav-item .nav-link:hover::before{
+  .navbar .nav-item .about:hover::before {
     display: none;
-
+  }
+  .navbar .nav-item .nav-link:hover::before {
+    display: none;
   }
   .navbar {
-
-position: relative !important;
- 
+    position: relative !important;
   }
 }
 /* hero section start */
 .hero-section {
   background-color: black;
   height: 100vh;
+
 }
-.hero-section .hero-content-sec {
-  background-color: rgba(0, 0, 0, 0.295);
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  transform: translateY(200px);
-  width: 60%;
-  margin: 0 auto;
-  box-shadow: 0 0 10px white;
-  padding-bottom: 30px;
-  text-align: center;
+.hero-section .hero-content h2{
+  text-transform: capitalize;
+  font-size: 45px;
+  padding-top: 60px;
 }
-.hero-section .hero-content-sec h4 {
-  font-size: 70px;
-  text-transform: uppercase;
-  color: white;
-  text-shadow: 6px 2px red;
+ .hero-img{
+  width: 100%;
+ padding-top: 50px;
 }
-.hero-section .hero-content-sec h2 {
-  font-size: 70px;
-  text-transform: uppercase;
-  color: white;
-  text-shadow: 6px 2px red;
-}
-.hero-section .hero-content-sec button {
-  padding: 10px 30px;
-  border: 6px solid #f49742;
-  border-radius: 20px;
-}
-.hero-section .hero-content-sec button a {
-  text-decoration: none;
-  font-size: 30px;
-  text-transform: uppercase;
-  font-weight: 900;
+.hero-img img{
+  width: 100%;
 }
 /* media query hero section */
 @media screen and (max-width: 757px) {
@@ -216,6 +183,10 @@ position: relative !important;
     width: 80% !important;
     margin: 0 auto;
   }
+  .about-container .about-heading h2 {
+    width: 60%;
+    margin: 0 auto;
+  }
 }
 @media screen and (max-width: 500px) {
   .about-container {
@@ -230,7 +201,7 @@ position: relative !important;
     font-size: 40px;
   }
   .about-container .about-heading h2 {
-    width: 60%;
+    width: 100%;
     margin: 0 auto;
   }
 }
@@ -276,6 +247,19 @@ position: relative !important;
 .chart-images .image1 img:hover {
   scale: 1.1;
   transition: all ease 0.5s;
+}
+/* mediA Query */
+@media screen and (max-width: 800px) {
+  .chart-section h2 {
+    width: 60%;
+    margin: 0 auto;
+  }
+}
+@media screen and (max-width: 500px) {
+  .chart-section h2 {
+    width: 100%;
+    margin: 0 auto;
+  }
 }
 /* community section */
 .community-section {
@@ -327,10 +311,19 @@ position: relative !important;
 .contact-adress p {
   background-color: #2e9cbc;
   color: white;
-  font-size: 30px;
+  font-size: 22px;
   width: 60%;
   margin: 0 auto;
+
   overflow: hidden;
+  padding: 0 10px;
+}
+/* media query */
+@media screen and (max-width: 700px) {
+  .contact-adress p {
+    width: 100%;
+    font-size: 18px;
+  }
 }
 /* tokenomics */
 /* .wrapper {
@@ -343,22 +336,22 @@ position: relative !important;
   justify-content: space-around;
   gap: 10px;
 } */
-.tokenomics-section{
+.tokenomics-section {
   background-color: brown;
 }
-.tokenomics-section h2{
+.tokenomics-section h2 {
   font-size: 70px;
   text-transform: capitalize;
   color: white;
   text-shadow: 6px 2px red;
 }
-.tokenomics-section .wrapper{
+.tokenomics-section .wrapper {
   width: 80%;
   margin: 0 auto;
   display: flex;
   align-items: center;
   justify-content: space-between;
-padding: 80px 0;
+  padding: 80px 0;
 }
 .containers {
   width: 50vmin;
@@ -370,25 +363,25 @@ padding: 80px 0;
   position: relative;
   font-size: 16px;
   border-radius: 0.5em;
-  background-color: #21242b;
-  border-bottom: 10px solid #18f98f;
+
   overflow: hidden;
 }
-.tokenomics-section   i {
+.tokenomics-section i {
   color: #18f98f;
   font-size: 2.5em;
   text-align: center;
+  display: none;
 }
-.tokenomics-section  span.num {
+.tokenomics-section span.num {
   color: #ffffff;
   display: grid;
   place-items: center;
   font-weight: 600;
   font-size: 3em;
 }
-.tokenomics-section  span.text {
+.tokenomics-section span.text {
   color: #e0e0e0;
-  font-size: 1em;
+  font-size: 30px;
   text-align: center;
   pad: 0.7em 0;
   font-weight: 400;
