--- a/style.css
+++ b/style.css
@@ -485,12 +485,12 @@ background-color: black;
 }
 .roadmap-section .roadmap-content h2{
   text-transform: capitalize;
-  font-size: 35px;
+  font-size: 45px;
   color: white;
 }
 .roadmap-section .roadmap-content p{
   text-transform: capitalize;
-  font-size: 22px;
+  font-size: 28px;
   color: white;
 }
 .roadmap-section .roadmap-content button{
@@ -511,6 +511,7 @@ border-radius: 50px;
 marquee{
   font-size: 20px;
   text-transform: uppercase;
+  font-weight: bold;
 }
 marquee span{
  margin: 0 60px;
