--- a/style.css
+++ b/style.css
@@ -91,6 +91,25 @@
   background-color: #2e9cbc;
   opacity: 1;
 }
+.navbar .nav-item .roadmap::before {
+  content: "";
+  position: absolute;
+  background-color: black;
+  width: 2px;
+  height: 60px;
+  right: 70px;
+  top: -4px;
+  transform: rotate(268deg);
+  transition: all ease 0.5s;
+  opacity: 0;
+}
+.navbar .nav-item .roadmap:hover::before {
+  display: block;
+  transform: rotate(220deg);
+  transition: all ease 0.5s;
+  background-color: #2e9cbc;
+  opacity: 1;
+}
 .navbar .nav-item .active {
   color: #2e9cbc !important;
 }
